@@ -41,9 +41,9 @@ set(INCLUDED_POTHOS_UTIL_CMAKE TRUE)
 ## Pass this flag to the util function to enable scanning of SOURCES.
 ## This is required to scan SOURCES but not when DOC_SOURCES are used.
 ##
-## PREFIX - custom install prefix or unspecified for automatic
-## The automatic prefix defaults to the Pothos install root,
-## or CMAKE_INSTALL_PREFIX when the Pothos install root is /usr.
+## PREFIX - override the default install prefix when specified
+## The prefix modifies the destination with an absolute path
+## to replace the typical CMAKE_INSTALL_PREFIX install rules.
 ##
 ########################################################################
 function(POTHOS_MODULE_UTIL)
@@ -85,14 +85,11 @@ function(POTHOS_MODULE_UTIL)
         list(APPEND POTHOS_MODULE_UTIL_SOURCES ${cpp_doc_file})
     endif()
 
+    set(MODULE_DESTINATION lib${LIB_SUFFIX}/Pothos/modules/${POTHOS_MODULE_UTIL_DESTINATION})
+
     #determine user-specified or automatic install prefix
-    if (MODULE_PREFIX)
-    elseif (POTHOS_IN_TREE_SOURCE_DIR)
-        set(MODULE_PREFIX ${CMAKE_INSTALL_PREFIX})
-    elseif ("${POTHOS_ROOT}" STREQUAL "/usr")
-        set(MODULE_PREFIX ${CMAKE_INSTALL_PREFIX})
-    else()
-        set(MODULE_PREFIX ${POTHOS_ROOT})
+    if (POTHOS_MODULE_UTIL_PREFIX)
+        set(MODULE_DESTINATION ${POTHOS_MODULE_UTIL_PREFIX}/${MODULE_DESTINATION})
     endif()
 
     #setup module build and install rules
@@ -102,7 +99,7 @@ function(POTHOS_MODULE_UTIL)
     set_target_properties(${POTHOS_MODULE_UTIL_TARGET} PROPERTIES DEBUG_POSTFIX "") #same name in debug mode
     install(
         TARGETS ${POTHOS_MODULE_UTIL_TARGET}
-        DESTINATION ${MODULE_PREFIX}/lib${LIB_SUFFIX}/Pothos/modules/${POTHOS_MODULE_UTIL_DESTINATION}
+        DESTINATION ${MODULE_DESTINATION}
     )
 
 endfunction(POTHOS_MODULE_UTIL)
